base/hermes-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hermes-webui
  namespace: hermes-webui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - webui.oostrandpark.com
      secretName: hermes-webui-tls
  rules:
    - host: webui.oostrandpark.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hermes-webui
                port:
                  number: 8787
